--- a/components/welcome/welcomeCommon.module.css
+++ b/components/welcome/welcomeCommon.module.css
@@ -51,11 +51,11 @@
   font-weight: 400;
   padding-top: 0;
   margin-bottom: 0;
-  margin-top: 0;
+  margin-top: 14px;
   font-family: "Open Sans", sans-serif; /* Ensure the font-family is applied */
   text-align: left;
   line-height: 1.55;
-  max-width: 680px;
+  max-width: 600px;
 }
 
 @keyframes fadeIn {
